--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.7.1",
   "description": "Use 1000's of icon fonts easily in your React Native apps.",
   "main": "index",
-  "author": "Cory Smith <cory.m.smith@gmail.com>",
+  "author": "Troy Watt <troy.watt@ultradent.com>",
   "keywords": [
     "react",
     "icons",
@@ -24,11 +24,9 @@
   "devDependencies": {
     "react-native": ">= 0.12.x || 0.12.0-rc || 0.13.x || 0.13.0-rc || 0.14.x || 0.14.0-rc || 0.15.0-rc || 0.15.x || 0.16.0"
   },
-  "homepage": "https://github.com/corymsmith/react-native-icons",
-  "bugs": "https://github.com/corymsmith/react-native-icons/issues",
   "repository": {
     "type": "git",
-    "url": "git://github.com/corymsmith/react-native-icons.git"
+    "url": "https://github.com/Ultradent/react-native-icons"
   },
   "react-native-module": {
     "podfile": "react-native-icons.podspec"
